add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,56 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <h1>Landing Page</h1>
+    <header class="header" id="header">
+      <div class="header__container">
+
+        <nav class="header__nav">
+
+
+          <!-- TODO: меню  БУргера / мобільне меню -->
+          <div class="mobile-menu modal-area-bgd" id="mobile-menu">
+
+            <div class="menu" id="menu">
+              <ul class="menu-list">
+                <li class="menu-list__item">
+                  <a href="#about" class="menu-list__link">About</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#projects" class="menu-list__link">Projects</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#cost-calculator" class="menu-list__link">Cost calculator</a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#contacts" class="menu-list__link">Contacts</a>
+                </li>
+              </ul>
+              <ul class="menu-contact">
+                <li class="menu-contact__item">
+                  <a href="tel:+380978579842" class="menu-contact__phone">+38 (097) 857-98-42</a>
+                </li>
+                <li>
+                  <a href="mailto:itmorozr@gmail.com" class="menu-contact__email">itmorozr@gmail.com</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="header__button-wrap">
+            <a href="" class="burger" id="burger">
+            </a>
+          </div>
+
+          <!-- TODO: логотип -->
+          <a href="#" class="logo">
+            <span class="logo__figere"></span>
+          </a>
+
+
+        </nav>
+
+
+      </div>
+    </header>
   </body>
 </html>
